compiler-tests/src/test/data/diagnostic/provides/ProvidesCannotLiveInObjects.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

object InvalidContainer {
  @Provides fun <!PROVIDES_ERROR!>provideString<!>(): String = "Hello"
}
